--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,10 @@ click==8.1.7
 # Database
 SQLAlchemy>=2.0.0
 alembic>=1.13.1
+psycopg2-binary==2.9.9
 
 # Authentication & Security
+email-validator>=2.2.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.9
